--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,18 @@
+#Tomcat properties
 server.port=8000
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#H2 properties
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
 
-spring.jpa.database=h2
+#JPA properties
+spring.jpa.database=mysql
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 
+#Spring datasource properties
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/books
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.platform=mysql
+spring.datasource.initialization-mode=always
